<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="50dp"
            android:fontFamily="@font/gorditas"
            android:text="@string/icon"
            android:textColor="@color/white"
            android:textSize="80sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alfaslabone"
            android:text="@string/your_goals"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/futura"
            android:text="@string/your_information"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/target_weight"
            android:fontFamily="@font/futura"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/targetWeightEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/grey_textbox"
            android:fontFamily="@font/futura"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/weight_hint"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/days_of_exercise"
            android:fontFamily="@font/futura"
            android:textColor="@color/white"
            android:textSize="20sp"

            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/daysExerciseEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/grey_textbox"
            android:fontFamily="@font/futura"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="3"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/select_end_results"
            android:fontFamily="@font/futura"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/buildMuscleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/grey_togglebutton"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/futura"
            android:textOff="@string/build_muscle"
            android:textOn="@string/build_muscle"
            android:textSize="17sp"
            android:textFontWeight="700"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"/>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/weightLossBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/grey_togglebutton"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/futura"
            android:textOff="@string/weight_loss"
            android:textOn="@string/weight_loss"
            android:textFontWeight="700"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"/>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/incStaminaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/grey_togglebutton"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/futura"
            android:textOff="@string/increase_stamina"
            android:textOn="@string/increase_stamina"
            android:textSize="18sp"
            android:textFontWeight="700"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/continue_text"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/orange_button"
            android:fontFamily="@font/lexend"/>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>