<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="188dp"
            android:fontFamily="@font/gorditas"
            android:text="@string/icon"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="80sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alfaslabone"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/futura"
            android:text="@string/review"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            android:fontFamily="@font/futura"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/futura"
            android:text="John Doe"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textFontWeight="650"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date_of_birth"
            android:fontFamily="@font/futura"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dateOfBirthTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/futura"
            android:text="19 / 02 / 2000"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textFontWeight="650"/>

        <TableRow
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/futura"
            android:text="@string/your_goals"
            android:textColor="@color/white"
            android:textSize="20sp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/weight"
                android:fontFamily="@font/futura"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/height"
                android:fontFamily="@font/futura"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"/>

        </TableRow>

        <TableRow
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/futura"
            android:text="@string/your_goals"
            android:textColor="@color/white"
            android:textSize="20sp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weightTv"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/futura"
                android:text="60"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textFontWeight="650"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/heightTv"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/futura"
                android:text="150"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textFontWeight="650"/>

        </TableRow>



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/your_bmi"
            android:fontFamily="@font/futura"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bmiTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/futura"
            android:text="29"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textFontWeight="650"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/target_weight"
            android:fontFamily="@font/futura"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/targetWeightTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/futura"
            android:text="55"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textFontWeight="650"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exercise_goal"
            android:fontFamily="@font/futura"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fitGoalTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/futura"
            android:text="3 times per week"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textFontWeight="650"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/end_goal"
            android:fontFamily="@font/futura"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/endGoalTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/futura"
            android:text="Weight loss"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textFontWeight="650"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/continue_text"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/orange_button"
            android:fontFamily="@font/lexend"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>