<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgSecondary">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="100dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/alfaslabone"
            android:text="@string/settings"
            android:textColor="#2D2E4A"
            android:textSize="34sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/navy_button"
            android:text="@string/profile"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/bgSecondary"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/navy_button"
            android:text="@string/account"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/bgSecondary"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/navy_button"
            android:text="@string/contact"
            android:textAllCaps="false"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="start|center_vertical"
            android:textColor="@color/bgSecondary"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/orange_button"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/bgSecondary"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
